@startuml

title __RD-MS-TENANTMANAGEMENT's Class Diagram__\n

  namespace io.radien.ms.tenantmanagement {
    class io.radien.ms.tenantmanagement.TenantManagementApplication {
    }
  }
  

  namespace io.radien.ms.tenantmanagement {
    namespace config {
      class io.radien.ms.tenantmanagement.config.TenantConfiguration {
      }
    }
  }
  

  namespace io.radien.ms.tenantmanagement {
    namespace entities {
      class io.radien.ms.tenantmanagement.entities.ActiveTenantEntity {
      }
    }
  }
  

  namespace io.radien.ms.tenantmanagement {
    namespace entities {
      class io.radien.ms.tenantmanagement.entities.ContractEntity {
      }
    }
  }
  

  namespace io.radien.ms.tenantmanagement {
    namespace entities {
      class io.radien.ms.tenantmanagement.entities.TenantEntity {
      }
    }
  }
  

  namespace io.radien.ms.tenantmanagement {
    namespace entities {
      class io.radien.ms.tenantmanagement.entities.TenantTypeConverter {
      }
    }
  }
  

  namespace io.radien.ms.tenantmanagement {
    namespace providers {
      class io.radien.ms.tenantmanagement.providers.SystemContractMessageBodyReader {
      }
    }
  }
  

  namespace io.radien.ms.tenantmanagement {
    namespace service {
      class io.radien.ms.tenantmanagement.service.ActiveTenantResource {
      }
    }
  }
  

  namespace io.radien.ms.tenantmanagement {
    namespace service {
      class io.radien.ms.tenantmanagement.service.ActiveTenantService {
      }
    }
  }
  

  namespace io.radien.ms.tenantmanagement {
    namespace service {
      class io.radien.ms.tenantmanagement.service.ContractResource {
      }
    }
  }
  

  namespace io.radien.ms.tenantmanagement {
    namespace service {
      class io.radien.ms.tenantmanagement.service.ContractService {
      }
    }
  }
  

  namespace io.radien.ms.tenantmanagement {
    namespace service {
      class io.radien.ms.tenantmanagement.service.EntityManagerHolder {
      }
    }
  }
  

  namespace io.radien.ms.tenantmanagement {
    namespace service {
      class io.radien.ms.tenantmanagement.service.TenantResource {
      }
    }
  }
  

  namespace io.radien.ms.tenantmanagement {
    namespace service {
      class io.radien.ms.tenantmanagement.service.TenantService {
      }
    }
  }
  

  namespace io.radien.ms.tenantmanagement {
    namespace util {
      class io.radien.ms.tenantmanagement.util.ContractModelMapper {
      }
    }
  }
  

  io.radien.ms.tenantmanagement.TenantManagementApplication -up-|> javax.ws.rs.core.Application
  io.radien.ms.tenantmanagement.config.TenantConfiguration .up.|> io.radien.api.OAFAccess
  io.radien.ms.tenantmanagement.entities.ActiveTenantEntity -up-|> io.radien.ms.tenantmanagement.client.entities.ActiveTenant
  io.radien.ms.tenantmanagement.entities.ContractEntity -up-|> io.radien.ms.tenantmanagement.client.entities.Contract
  io.radien.ms.tenantmanagement.entities.TenantEntity -up-|> io.radien.ms.tenantmanagement.client.entities.Tenant
  io.radien.ms.tenantmanagement.entities.TenantTypeConverter .up.|> javax.persistence.AttributeConverter
  io.radien.ms.tenantmanagement.providers.SystemContractMessageBodyReader .up.|> javax.ws.rs.ext.MessageBodyReader
  io.radien.ms.tenantmanagement.service.ActiveTenantResource .up.|> io.radien.ms.tenantmanagement.client.services.ActiveTenantResourceClient
  io.radien.ms.tenantmanagement.service.ActiveTenantResource o-- io.radien.api.service.tenant.ActiveTenantServiceAccess : activeTenantServiceAccess
  io.radien.ms.tenantmanagement.service.ActiveTenantService .up.|> io.radien.api.service.tenant.ActiveTenantServiceAccess
  io.radien.ms.tenantmanagement.service.ActiveTenantService o-- io.radien.ms.tenantmanagement.service.EntityManagerHolder : emh
  io.radien.ms.tenantmanagement.service.ContractResource .up.|> io.radien.ms.tenantmanagement.client.services.ContractResourceClient
  io.radien.ms.tenantmanagement.service.ContractResource o-- io.radien.api.service.tenant.ContractServiceAccess : contractService
  io.radien.ms.tenantmanagement.service.ContractService .up.|> io.radien.api.service.tenant.ContractServiceAccess
  io.radien.ms.tenantmanagement.service.ContractService o-- io.radien.ms.tenantmanagement.service.EntityManagerHolder : emh
  io.radien.ms.tenantmanagement.service.TenantResource .up.|> io.radien.ms.tenantmanagement.client.services.TenantResourceClient
  io.radien.ms.tenantmanagement.service.TenantResource o-- io.radien.api.service.tenant.TenantServiceAccess : tenantService
  io.radien.ms.tenantmanagement.service.TenantService .up.|> io.radien.api.service.tenant.TenantServiceAccess
  io.radien.ms.tenantmanagement.service.TenantService o-- io.radien.ms.tenantmanagement.service.EntityManagerHolder : emh


 

@enduml
